<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg_layout">

        <TextView
            android:id="@+id/welcome_header"
            style="@style/textStyle_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/welcome"
            android:textColor="@color/sea_green"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_header"
            style="@style/textStyle_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/welcome_header"
            app:layout_constraintTop_toBottomOf="@+id/welcome_header" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/battery_lottie_id_main"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/card_enable"
            app:layout_constraintTop_toBottomOf="@+id/welcome_header"
            android:layout_marginVertical="@dimen/_5sdp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/battery_percentage_id"
            app:layout_constraintStart_toStartOf="@id/battery_lottie_id_main"
            app:layout_constraintEnd_toEndOf="@+id/battery_lottie_id_main"
            app:layout_constraintBottom_toTopOf="@+id/charging_status_id"
            android:layout_marginBottom="@dimen/_5sdp"
            style="@style/textStyle_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/charging_status_id"
            app:layout_constraintStart_toStartOf="@id/battery_lottie_id_main"
            app:layout_constraintEnd_toEndOf="@+id/battery_lottie_id_main"
            app:layout_constraintBottom_toBottomOf="@+id/battery_lottie_id_main"
            android:layout_marginBottom="@dimen/_20sdp"
            style="@style/textStyle_normal"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/gradient_bg_card"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/battery_lottie_id_main"
            app:strokeWidth="1dp"
            app:strokeColor="@color/dark_grey"
            app:cardCornerRadius="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg_card"
                android:padding="@dimen/_15sdp">

                <TextView
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_animation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardCornerRadius="@dimen/_60sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/yellow"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp">

                        <TextView
                            android:textStyle="bold"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_battery"
            app:strokeWidth="0dp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/card_enable"
            app:layout_constraintStart_toStartOf="@id/card_enable"
            app:layout_constraintEnd_toStartOf="@+id/card_walpaper"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_bg_reverse_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/gradient_bg_reverse_card">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:src="@drawable/animations_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/animation_icon_id"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/animation_TV"
                    android:text="@string/animation"
                    style="@style/textStyle_normal"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/animation_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/animation_icon_id"
                    android:layout_marginTop="@dimen/_7sdp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/animation_sub_TV"
                    android:text="@string/animation_sub"
                    style="@style/textStyle_normal"
                    android:textSize="@dimen/_6sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/animation_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/animation_TV"/>





            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_walpaper"
            app:strokeWidth="0dp"
            app:strokeColor="@color/transparent"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/card_battery"
            app:layout_constraintStart_toEndOf="@+id/card_battery"
            app:layout_constraintEnd_toEndOf="@id/card_enable">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg_reverse_card"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/walpaper_icon_id"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/walpapers_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/walpaper_TV"
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/walpaper"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/walpaper_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/walpaper_icon_id" />


                <TextView
                    android:id="@+id/walpaper_sub_TV"
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walpaper_sub"
                    android:textSize="@dimen/_6sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/walpaper_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/walpaper_TV" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_create_new"
            app:strokeWidth="0dp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/card_battery"
            app:layout_constraintStart_toStartOf="@id/card_enable"
            app:layout_constraintEnd_toStartOf="@+id/card_walpaper"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gradient_bg_reverse_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/gradient_bg_reverse_card">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:src="@drawable/create_new_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/create_new_icon_id"/>


                <TextView
                    android:id="@+id/create_new_TV"
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/create_new"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/create_new_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/create_new_icon_id" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_new_sub_TV"
                    android:text="@string/create_sub"
                    style="@style/textStyle_normal"
                    android:textSize="@dimen/_6sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/create_new_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/create_new_TV"/>





            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_creation"
            app:strokeWidth="0dp"
            app:strokeColor="@color/transparent"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/card_create_new"
            app:layout_constraintStart_toEndOf="@+id/card_create_new"
            app:layout_constraintEnd_toEndOf="@id/card_enable">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg_reverse_card"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/creation_icon_id"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/creations_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/creation_TV"
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/creation"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/creation_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/creation_icon_id" />


                <TextView
                    android:id="@+id/creation_sub_TV"
                    style="@style/textStyle_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creations_sub"
                    android:textSize="@dimen/_6sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/creation_icon_id"
                    app:layout_constraintTop_toBottomOf="@+id/creation_TV" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>







    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>