<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.batterycharging.animation.chargingeffect.Fragments.FirstGuideFragment"
    android:background="@drawable/gradient_bg_layout">


    <ImageView
        android:id="@+id/guide_1_img_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:src="@drawable/guide_1_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_1_img_id"
        android:id="@+id/guide_1_tv_id"
        android:text="@string/guide_1_main_tv"
        style="@style/textStyle_normal"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_1_tv_id"
        android:id="@+id/sub_guide_1_tv_id"
        android:text="@string/guide_1_sub_tv"
        style="@style/textStyle_normal"
        android:fontFamily="@font/inter_regulat"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/continue_card_id"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/guide_1_nav_img"
        android:layout_marginBottom="@dimen/_20sdp"/>


    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="@dimen/_15sdp"
        android:backgroundTint="@color/yellow"
        app:strokeColor="@null"
        app:strokeWidth="0dp"
        android:id="@+id/continue_card_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/continue_title"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>